parser/niavka_parser.go
// Code generated from NiavkaParser.g4 by ANTLR 4.12.0. DO NOT EDIT.

package parser // NiavkaParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type NiavkaParser struct {
	*antlr.BaseParser
}

var niavkaparserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func niavkaparserParserInit() {
	staticData := &niavkaparserParserStaticData
	staticData.literalNames = []string{
		"", "'\\u043A\\u0456\\u043D\\u0435\\u0446\\u044C'", "'\\u0434\\u0456\\u044F'",
		"", "", "'('", "')'", "'['", "']'", "','", "'='", "'+'", "'-'", "'*'",
		"'/'", "'.'",
	}
	staticData.symbolicNames = []string{
		"", "END", "DIIA", "SKIP_SPACES", "NL", "OPEN_PAREN", "CLOSE_PAREN",
		"OPEN_ARRAY", "CLOSE_ARRAY", "COMMA", "ASSIGN", "PLUS", "MINUS", "MUL",
		"DIV", "DOT", "ID", "NUMBER", "INTEGER", "FLOAT", "STRING",
	}
	staticData.ruleNames = []string{
		"file", "program", "program_element", "diia", "value", "assign", "assign_value",
		"identifier", "type_value", "args", "arg", "params", "param", "body",
		"body_element", "arithmetic_op_mul", "arithmetic_op_add", "nl", "nls",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// NiavkaParserInit initializes any static state used to implement NiavkaParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewNiavkaParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func NiavkaParserInit() {
	staticData := &niavkaparserParserStaticData
	staticData.once.Do(niavkaparserParserInit)
}

// NewNiavkaParser produces a new parser instance for the optional input antlr.TokenStream.
func NewNiavkaParser(input antlr.TokenStream) *NiavkaParser {
	NiavkaParserInit()
	this := new(NiavkaParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &niavkaparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "NiavkaParser.g4"

	return this
}

// NiavkaParser tokens.
const (
	NiavkaParserEOF         = antlr.TokenEOF
	NiavkaParserEND         = 1
	NiavkaParserDIIA        = 2
	NiavkaParserSKIP_SPACES = 3
	NiavkaParserNL          = 4
	NiavkaParserOPEN_PAREN  = 5
	NiavkaParserCLOSE_PAREN = 6
	NiavkaParserOPEN_ARRAY  = 7
	NiavkaParserCLOSE_ARRAY = 8
	NiavkaParserCOMMA       = 9
	NiavkaParserASSIGN      = 10
	NiavkaParserPLUS        = 11
	NiavkaParserMINUS       = 12
	NiavkaParserMUL         = 13
	NiavkaParserDIV         = 14
	NiavkaParserDOT         = 15
	NiavkaParserID          = 16
	NiavkaParserNUMBER      = 17
	NiavkaParserINTEGER     = 18
	NiavkaParserFLOAT       = 19
	NiavkaParserSTRING      = 20
)

// NiavkaParser rules.
const (
	NiavkaParserRULE_file              = 0
	NiavkaParserRULE_program           = 1
	NiavkaParserRULE_program_element   = 2
	NiavkaParserRULE_diia              = 3
	NiavkaParserRULE_value             = 4
	NiavkaParserRULE_assign            = 5
	NiavkaParserRULE_assign_value      = 6
	NiavkaParserRULE_identifier        = 7
	NiavkaParserRULE_type_value        = 8
	NiavkaParserRULE_args              = 9
	NiavkaParserRULE_arg               = 10
	NiavkaParserRULE_params            = 11
	NiavkaParserRULE_param             = 12
	NiavkaParserRULE_body              = 13
	NiavkaParserRULE_body_element      = 14
	NiavkaParserRULE_arithmetic_op_mul = 15
	NiavkaParserRULE_arithmetic_op_add = 16
	NiavkaParserRULE_nl                = 17
	NiavkaParserRULE_nls               = 18
)

// IFileContext is an interface to support dynamic dispatch.
type IFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetF_program returns the f_program rule contexts.
	GetF_program() IProgramContext

	// SetF_program sets the f_program rule contexts.
	SetF_program(IProgramContext)

	// Getter signatures
	EOF() antlr.TerminalNode
	Program() IProgramContext

	// IsFileContext differentiates from other interfaces.
	IsFileContext()
}

type FileContext struct {
	*antlr.BaseParserRuleContext
	parser    antlr.Parser
	f_program IProgramContext
}

func NewEmptyFileContext() *FileContext {
	var p = new(FileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NiavkaParserRULE_file
	return p
}

func (*FileContext) IsFileContext() {}

func NewFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FileContext {
	var p = new(FileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NiavkaParserRULE_file

	return p
}

func (s *FileContext) GetParser() antlr.Parser { return s.parser }

func (s *FileContext) GetF_program() IProgramContext { return s.f_program }

func (s *FileContext) SetF_program(v IProgramContext) { s.f_program = v }

func (s *FileContext) EOF() antlr.TerminalNode {
	return s.GetToken(NiavkaParserEOF, 0)
}

func (s *FileContext) Program() IProgramContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProgramContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProgramContext)
}

func (s *FileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NiavkaParserListener); ok {
		listenerT.EnterFile(s)
	}
}

func (s *FileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NiavkaParserListener); ok {
		listenerT.ExitFile(s)
	}
}

func (s *FileContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NiavkaParserVisitor:
		return t.VisitFile(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NiavkaParser) File() (localctx IFileContext) {
	this := p
	_ = this

	localctx = NewFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, NiavkaParserRULE_file)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)

		var _x = p.Program()

		localctx.(*FileContext).f_program = _x
	}
	{
		p.SetState(39)
		p.Match(NiavkaParserEOF)
	}

	return localctx
}

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllProgram_element() []IProgram_elementContext
	Program_element(i int) IProgram_elementContext
	AllNl() []INlContext
	Nl(i int) INlContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NiavkaParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NiavkaParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) AllProgram_element() []IProgram_elementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IProgram_elementContext); ok {
			len++
		}
	}

	tst := make([]IProgram_elementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IProgram_elementContext); ok {
			tst[i] = t.(IProgram_elementContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Program_element(i int) IProgram_elementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProgram_elementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProgram_elementContext)
}

func (s *ProgramContext) AllNl() []INlContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(INlContext); ok {
			len++
		}
	}

	tst := make([]INlContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(INlContext); ok {
			tst[i] = t.(INlContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Nl(i int) INlContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INlContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(INlContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NiavkaParserListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NiavkaParserListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NiavkaParserVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NiavkaParser) Program() (localctx IProgramContext) {
	this := p
	_ = this

	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, NiavkaParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(41)
		p.Program_element()
	}
	p.SetState(47)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == NiavkaParserNL {
		{
			p.SetState(42)
			p.Nl()
		}
		{
			p.SetState(43)
			p.Program_element()
		}

		p.SetState(49)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IProgram_elementContext is an interface to support dynamic dispatch.
type IProgram_elementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Diia() IDiiaContext
	Value() IValueContext
	Assign() IAssignContext
	Nls() INlsContext

	// IsProgram_elementContext differentiates from other interfaces.
	IsProgram_elementContext()
}

type Program_elementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgram_elementContext() *Program_elementContext {
	var p = new(Program_elementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NiavkaParserRULE_program_element
	return p
}

func (*Program_elementContext) IsProgram_elementContext() {}

func NewProgram_elementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Program_elementContext {
	var p = new(Program_elementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NiavkaParserRULE_program_element

	return p
}

func (s *Program_elementContext) GetParser() antlr.Parser { return s.parser }

func (s *Program_elementContext) Diia() IDiiaContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDiiaContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDiiaContext)
}

func (s *Program_elementContext) Value() IValueContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValueContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValueContext)
}

func (s *Program_elementContext) Assign() IAssignContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAssignContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAssignContext)
}

func (s *Program_elementContext) Nls() INlsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INlsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INlsContext)
}

func (s *Program_elementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Program_elementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Program_elementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NiavkaParserListener); ok {
		listenerT.EnterProgram_element(s)
	}
}

func (s *Program_elementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NiavkaParserListener); ok {
		listenerT.ExitProgram_element(s)
	}
}

func (s *Program_elementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NiavkaParserVisitor:
		return t.VisitProgram_element(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NiavkaParser) Program_element() (localctx IProgram_elementContext) {
	this := p
	_ = this

	localctx = NewProgram_elementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, NiavkaParserRULE_program_element)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(50)
			p.Diia()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(51)
			p.value(0)
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(52)
			p.Assign()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(53)
			p.Nls()
		}

	}

	return localctx
}

// IDiiaContext is an interface to support dynamic dispatch.
type IDiiaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetD_name returns the d_name rule contexts.
	GetD_name() IIdentifierContext

	// GetD_params returns the d_params rule contexts.
	GetD_params() IParamsContext

	// GetD_type returns the d_type rule contexts.
	GetD_type() IType_valueContext

	// GetD_body returns the d_body rule contexts.
	GetD_body() IBodyContext

	// SetD_name sets the d_name rule contexts.
	SetD_name(IIdentifierContext)

	// SetD_params sets the d_params rule contexts.
	SetD_params(IParamsContext)

	// SetD_type sets the d_type rule contexts.
	SetD_type(IType_valueContext)

	// SetD_body sets the d_body rule contexts.
	SetD_body(IBodyContext)

	// Getter signatures
	DIIA() antlr.TerminalNode
	OPEN_PAREN() antlr.TerminalNode
	CLOSE_PAREN() antlr.TerminalNode
	AllNl() []INlContext
	Nl(i int) INlContext
	AllNls() []INlsContext
	Nls(i int) INlsContext
	END() antlr.TerminalNode
	Identifier() IIdentifierContext
	Type_value() IType_valueContext
	Body() IBodyContext
	Params() IParamsContext

	// IsDiiaContext differentiates from other interfaces.
	IsDiiaContext()
}

type DiiaContext struct {
	*antlr.BaseParserRuleContext
	parser   antlr.Parser
	d_name   IIdentifierContext
	d_params IParamsContext
	d_type   IType_valueContext
	d_body   IBodyContext
}

func NewEmptyDiiaContext() *DiiaContext {
	var p = new(DiiaContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NiavkaParserRULE_diia
	return p
}

func (*DiiaContext) IsDiiaContext() {}

func NewDiiaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DiiaContext {
	var p = new(DiiaContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NiavkaParserRULE_diia

	return p
}

func (s *DiiaContext) GetParser() antlr.Parser { return s.parser }

func (s *DiiaContext) GetD_name() IIdentifierContext { return s.d_name }

func (s *DiiaContext) GetD_params() IParamsContext { return s.d_params }

func (s *DiiaContext) GetD_type() IType_valueContext { return s.d_type }

func (s *DiiaContext) GetD_body() IBodyContext { return s.d_body }

func (s *DiiaContext) SetD_name(v IIdentifierContext) { s.d_name = v }

func (s *DiiaContext) SetD_params(v IParamsContext) { s.d_params = v }

func (s *DiiaContext) SetD_type(v IType_valueContext) { s.d_type = v }

func (s *DiiaContext) SetD_body(v IBodyContext) { s.d_body = v }

func (s *DiiaContext) DIIA() antlr.TerminalNode {
	return s.GetToken(NiavkaParserDIIA, 0)
}

func (s *DiiaContext) OPEN_PAREN() antlr.TerminalNode {
	return s.GetToken(NiavkaParserOPEN_PAREN, 0)
}

func (s *DiiaContext) CLOSE_PAREN() antlr.TerminalNode {
	return s.GetToken(NiavkaParserCLOSE_PAREN, 0)
}

func (s *DiiaContext) AllNl() []INlContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(INlContext); ok {
			len++
		}
	}

	tst := make([]INlContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(INlContext); ok {
			tst[i] = t.(INlContext)
			i++
		}
	}

	return tst
}

func (s *DiiaContext) Nl(i int) INlContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INlContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(INlContext)
}

func (s *DiiaContext) AllNls() []INlsContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(INlsContext); ok {
			len++
		}
	}

	tst := make([]INlsContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(INlsContext); ok {
			tst[i] = t.(INlsContext)
			i++
		}
	}

	return tst
}

func (s *DiiaContext) Nls(i int) INlsContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INlsContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(INlsContext)
}

func (s *DiiaContext) END() antlr.TerminalNode {
	return s.GetToken(NiavkaParserEND, 0)
}

func (s *DiiaContext) Identifier() IIdentifierContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IIdentifierContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IIdentifierContext)
}

func (s *DiiaContext) Type_value() IType_valueContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IType_valueContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IType_valueContext)
}

func (s *DiiaContext) Body() IBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBodyContext)
}

func (s *DiiaContext) Params() IParamsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParamsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParamsContext)
}

func (s *DiiaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DiiaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DiiaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NiavkaParserListener); ok {
		listenerT.EnterDiia(s)
	}
}

func (s *DiiaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NiavkaParserListener); ok {
		listenerT.ExitDiia(s)
	}
}

func (s *DiiaContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NiavkaParserVisitor:
		return t.VisitDiia(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *NiavkaParser) Diia() (localctx IDiiaContext) {
	this := p
	_ = this

	localctx = NewDiiaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, NiavkaParserRULE_diia)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.Match(NiavkaParserDIIA)
	}
	{
		p.SetState(57)

		var _x = p.Identifier()

		localctx.(*DiiaContext).d_name = _x
	}
	{
		p.SetState(58)
		p.Match(NiavkaParserOPEN_PAREN)
	}

	{
		p.SetState(59)
		p.Nls()
	}
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == NiavkaParserID {
		{
			p.SetState(60)

			var _x = p.Params()

			localctx.(*DiiaContext).d_params = _x
		}

	}
	{
		p.SetState(63)
		p.Nls()
	}

	{
		p.SetState(65)
		p.Match(NiavkaParserCLOSE_PAREN)
	}
	p.SetState(67)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == NiavkaParserID {
		{
			p.SetState(66)

			var _x = p.Type_value()

			localctx.(*DiiaContext).d_type = _x
		}

	}
	{
		p.SetState(69)
		p.Nl()
	}
	p.SetState(73)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(70)

			var _x = p.Body()

			localctx.(*DiiaContext).d_body = _x
		}
		{
			p.SetState(71)
			p.Nl()
		}

	}
	{
		p.SetState(75)
		p.Nls()
	}
	{
		p.SetState(76)
		p.Match(NiavkaParserEND)
	}

	return localctx
}

// IValueContext is an interface to support dynamic dispatch.
type IValueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsValueContext differentiates from other interfaces.
	IsValueContext()
}

type ValueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyValueContext() *ValueContext {
	var p = new(ValueContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = NiavkaParserRULE_value
	return p
}

func (*ValueContext) IsValueContext() {}

func NewValueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ValueContext {
	var p = new(ValueContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = NiavkaParserRULE_value

	return p
}

func (s *ValueContext) GetParser() antlr.Parser { return s.parser }

func (s *ValueContext) CopyFrom(ctx *ValueContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *ValueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ValueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type Arithmetic_mulContext struct {
	*ValueContext
	a_left      IValueContext
	a_operation IArithmetic_op_mulContext
	a_right     IValueContext
}

func NewArithmetic_mulContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *Arithmetic_mulContext {
	var p = new(Arithmetic_mulContext)

	p.ValueContext = NewEmptyValueContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ValueContext))

	return p
}

func (s *Arithmetic_mulContext) GetA_left() IValueContext { return s.a_left }

func (s *Arithmetic_mulContext) GetA_operation() IArithmetic_op_mulContext { return s.a_operation }

func (s *Arithmetic_mulContext) GetA_right() IValueContext { return s.a_right }

func (s *Arithmetic_mulContext) SetA_left(v IValueContext) { s.a_left = v }

func (s *Arithmetic_mulContext) SetA_operation(v IArithmetic_op_mulContext) { s.a_operation = v }

func (s *Arithmetic_mulContext) SetA_right(v IValueContext) { s.a_right = v }

func (s *Arithmetic_mulContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Arithmetic_mulContext) AllValue() []IValueContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IValueContext); ok {
			len++
		}
	}

	tst := make([]IValueContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IValueContext); ok {
			tst[i] = t.(IValueContext)
			i++
		}
	}

	return tst
}

func (s *Arithmetic_mulContext) Value(i int) IValueContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValueContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValueContext)
}

func (s *Arithmetic_mulContext) Arithmetic_op_mul() IArithmetic_op_mulContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IArithmetic_op_mulContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IArithmetic_op_mulContext)
}

func (s *Arithmetic_mulContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NiavkaParserListener); ok {
		listenerT.EnterArithmetic_mul(s)
	}
}

func (s *Arithmetic_mulContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(NiavkaParserListener); ok {
		listenerT.ExitArithmetic_mul(s)
	}
}

func (s *Arithmetic_mulContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case NiavkaParserVisitor:
		return t.VisitArithmetic_mul(s)

	default:
		return t.VisitChildren(s)
	}
}

type CallContext struct {
	*ValueContext
	c_value IValueContext
	c_args  IArgsContext
}

func NewCallContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *CallContext {
	var p = new(CallContext)

	p.ValueContext = NewEmptyValueContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ValueContext))

	return p
}

func (s *CallContext) GetC_value() IValueContext { return s.c_value }

func (s *CallContext) GetC_args() IArgsContext { return s.c_args }

func (s *CallContext) SetC_value(v IValueContext) { s.c_value = v }

func (s *CallContext) SetC_args(v IArgsContext) { s.c_args = v }

func (s *CallContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CallContext) OPEN_PAREN() antlr.TerminalNode {
	return s.GetToken(NiavkaParserOPEN_PAREN, 0)
}

func (s *CallContext) CLOSE_PAREN() antlr.TerminalNode {
	return s.GetToken(NiavkaParserCLOSE_PAREN, 0)
}
